4k devices bg issu fixed, account icon aligned

--- a/assets/css/browse.css
+++ b/assets/css/browse.css
@@ -113,6 +113,8 @@
   /* dropdown styling header user account */
   .dropdown{
       cursor: pointer;
+      display: flex;
+      align-items: center;
   }
 
   .dropdown-content {
@@ -291,9 +293,7 @@
       color: black;
   }
 
-  #continue-watching{
-    box-shadow: 20px 10px 30px 180px black;
-  }
+ 
 
   /* owl carousel */
 
@@ -339,9 +339,17 @@
 }
 
 /* my list */
+.black-background{
+    margin-top: 140PX;
+    width: 100%;
+    background-color: black;
+    -webkit-box-shadow: 20px -40px 50px black;
+  -moz-box-shadow: 20px -40px 50px black;
+  box-shadow: 0px -40px 50px 15px black;
+}
 
 #mylist{
-    padding-top: 140px;
+    padding-top: 0px;
     position: relative;
 }
 @media (max-width: 900px){
@@ -493,6 +501,14 @@ footer ul li{
   .footer-navigation a.active {
     color: rgba(255, 255, 255, 0.726);
     background-color: rgb(36, 36, 36);
+  }
+
+  /* my list page styling */
+  .my-list-page-container{
+      flex-wrap: wrap;
+  }
+  .my-list-page-container a{
+      flex: 1/3;
   }
 
   /* mobile navigation setting */
